syntax = "proto3";

option csharp_namespace = "MunitS.Protos";

package storage;

service BlobStorage {
  rpc UploadFile(UploadRequest) returns (UploadResponse);
}

message UploadRequest {
  string bucketName = 1;
  string fileKey = 2;
  string contentType = 3;
  bytes data = 4;
}

message UploadResponse {
  string status = 1;
}
